<resources>
    <string name="app_name">DoAn_GoogBook</string>

    <string name="item_list_book_see_all">XEM TẤT CẢ</string>
    <string name="drawer_book_type">Thể loại</string>
    <string name="drawer_book">Sách</string>
    <string name="drawer_lecture">Giáo trình</string>
    <string name="drawer_short">Bài trích</string>
    <string name="drawer_thesis">Luận án</string>
    <string name="drawer_magazine">Báo tạp chí</string>
    <string name="drawer_img">Hình ảnh</string>
    <string name="drawer_author">Tác giả</string>
    <string name="drawer_nxb">Nhà xuất bản</string>
    <string name="drawer_news">Tin tức</string>
    <string name="drawer_help">Trợ giúp</string>
    <string name="drawer_nav_sign_in">Đăng ký</string>
    <string name="drawer_sign_up">Đăng nhập</string>
    <string name="lastest_news_upload_now">ĐĂNG TIN NGAY</string>
    <string name="item_post_like">Thích</string>
    <string name="item_post_share">Chia sẻ</string>
    <string name="item_post_save">Lưu</string>

    <string name="upload_doc_info">Thông tin tài liệu</string>
    <string name="upload_doc_file">Danh sách các file</string>
    <string name="upload_doc_image">Ảnh chi tiết tài liệu</string>
    <string name="upload_now">Đăng tin</string>
    <string name="dialog_camera_action_take_camera">Chụp ảnh</string>
    <string name="dialog_camera_action_choose_from_phone">Chọn từ bộ nhớ của máy</string>
    <string name="item_doc_file_choose_file">Chọn tệp</string>
    <string name="upload_no_doc_choosen">Chưa có tài liệu nào được chọn</string>
    <string name="upload_action_take_picture">ShowCamera</string>
    <string name="upload_action_choose_from_phone">ChooseFromPhone</string>
    <string name="upload_choose_your_file">Chọn file của bạn</string>
    <string name="upload_doc_max_size">Bạn không được gửi lên tài liệu quá 15MB</string>
    <string name="doc_detail_tittle">Thông tin tài liệu</string>
    <string name="doc_detail_tittle2">Thông tin chi tiết</string>
    <string name="upload_doc_name">Tên tài liệu</string>
    <string name="upload_doc_level">Cấp học sử dụng</string>
    <string name="upload_doc_subject">Môn học sử dụng</string>
    <string name="upload_doc_unversity">Trường sử dụng</string>
    <string name="upload_doc_year">Năm sử dụng</string>
    <string name="upload_doc_des">Miêu tả</string>
    <string name="upload_doc_soft_file">File mềm tài liệu</string>
    <string name="doc_detail_comment">Bình luận</string>
    <string name="doc_detail_left_comment">Để lại bình luận</string>
    <string name="doc_detail_send">Gửi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_option_choose_action">Chọn một hành động bạn muốn</string>
    <string name="edit_option_edit_post">Sửa bài viết</string>
    <string name="edit_option_delete_post">Xóa bài viết</string>
    <string name="upload_doc_type">Loại tài liệu</string>
    <string name="upload_doc_user_infomation">Thông tin liên hệ</string>
    <string name="upload_doc_user_phone">Số điện thoại</string>
    <string name="upload_doc_user_email">Email</string>
    <string name="upload_edit_post">Sửa thông tin</string>
    <string name="app_no_data_retry_later">Không có dữ liệu, vui lòng thử lại sau</string>
    <string name="filter_input_doc_name">Nhập tên tài liệu</string>
    <string name="filter_user_name">Tên người đăng bài</string>
    <string name="filter_input_user_name">Nhập tên người đăng bài</string>
    <string name="filter_input_doc_university">Nhập tên trường sử dụng</string>
    <string name="filter_input_doc_subject">Nhập môn học sử dụng</string>
    <string name="filter_filter">Tim kiếm</string>
    <string name="header_input_hint">Nhập tên tài liệu cần tìm</string>

    <string name="personal_my_post">Các bài đã đăng</string>
    <string name="personal_my_mark">Các bài đã lưu</string>
    <string name="personal_my_info">Thông tin cá nhân</string>
    <string name="personal_my_downloaded">Đã tải xuống</string>
    <string name="personal_setting">Cài đặt</string>

    <string name="right_toggle_introduce">Giới thiệu</string>
    <string name="right_toggle_support">Hỗ trợ</string>
    <string name="right_toggle_log_in">Đăng nhập</string>
    <string name="personal_log_out">Đăng xuất</string>
    <string name="personal_personal">Cá nhân</string>
    <string name="log_in_log_in">Đăng nhập</string>
    <string name="log_in_user_name">Tên đăng nhập</string>
    <string name="log_in_password">Mật khẩu</string>
    <string name="log_in_sign_up">Đăng kí ngay</string>
    <string name="log_in_forget_pass">Quên mật khẩu</string>
    <string name="log_in_remember_account">Ghi nhớ tài khoản</string>
    <string name="sign_up_sign_up">Đăng kí</string>
    <string name="sign_up_re_password">Nhập lại mật khẩu</string>
    <string name="sign_up_user_name">Tên của  bạn</string>
    <string name="sign_up_email">Email </string>
    <string name="sign_up_phone">Số điện thoại </string>
    <string name="sign_up_address">Địa chỉ </string>
    <string name="sign_up_choose_avatar">Chọn ảnh đại diện</string>
    <string name="sign_up_choose_background">Chọn ảnh bìa</string>
    <string name="sign_up_have_account">Đã có tài khoản ! Đăng nhập</string>
    <string name="sign_up_year_born">Ngày tháng năm sinh</string>
    <string name="sign_up_sex">Giới tính</string>
    <string name="app_no_intenet_connection">Không có tín hiệu mạng, vui lòng thử lại sau</string>
    <string name="upload_doc_post_day">Ngày đăng</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="dialog_update_delete">Hủy</string>
    <string name="dialog_update_update">Cập nhật</string>
</resources>
