<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorWhite"
             xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/colorLightGray"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_25dp"
                android:gravity="center"
                android:text="@string/sign_up_sign_up"
                android:textSize="@dimen/text_size_25sp"
                android:textStyle="bold"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                app:hint="@string/log_in_user_name"
                app:leftImg="@mipmap/ic_personal"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/log_in_password"
                app:leftImg="@mipmap/ic_password"
                app:security="true"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/sign_up_re_password"
                app:leftImg="@mipmap/ic_password"
                app:security="true"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/sign_up_user_name"
                app:leftImg="@mipmap/ic_personal"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/sign_up_email"
                app:leftImg="@mipmap/ic_email"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/sign_up_phone"
                app:leftImg="@mipmap/ic_phone"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/sign_up_address"
                app:leftImg="@mipmap/ic_address"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_year_born"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/sign_up_year_born"
                app:leftImg="@mipmap/ic_birth_day"/>

            <giaodien.admin.doan_googbook.widget.CustomSignUpRow
                android:id="@+id/sign_up_edt_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImg="@mipmap/ic_personal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_15dp"
                android:layout_marginLeft="@dimen/size_12dp"
                android:layout_marginRight="@dimen/size_12dp"
                android:layout_marginTop="@dimen/size_15dp"
                android:background="@drawable/bg_login"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/sign_up_choose_avatar"
                        android:textSize="@dimen/text_size_15sp"/>

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/sign_up_img_avatar"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:src="@drawable/ic_big_add"
                        app:civ_border_width="0.5dp"/>

                </LinearLayout>

                <View
                    style="@style/Divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/sign_up_choose_background"
                        android:textSize="@dimen/text_size_15sp"/>

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/sign_up_img_add_background"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:src="@drawable/ic_big_add"
                        app:civ_border_width="0.5dp"/>


                    <ImageView
                        android:id="@+id/sign_up_img_background"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginBottom="@dimen/size_5dp"
                        android:layout_marginLeft="@dimen/size_5dp"
                        android:layout_marginRight="@dimen/size_5dp"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:visibility="gone"/>

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/sign_up_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@drawable/selector_btn_upload"
                android:enabled="false"
                android:text="@string/sign_up_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_17sp"/>

            <TextView
                android:id="@+id/sign_up_btn_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:gravity="center"
                android:paddingBottom="@dimen/size_10dp"
                android:paddingTop="@dimen/size_10dp"
                android:text="@string/sign_up_have_account"
                android:textColor="@color/mainColor"/>

        </LinearLayout>


    </ScrollView>


</FrameLayout>
